# kis-hts

./: .gitignore  CLAUDE.md  README.md
backend/: CLAUDE.md  README.md  pyproject.toml  run_server.py
backend/app/: config.py  main.py  realtime.py  store.py
backend/app/kis/: analysis.py  auth.py  bars.py  rest.py  symbols.py  ws.py
backend/app/routers/: account.py  analysis.py  notify.py  orders.py  quotes.py  settings.py  symbols.py
backend/packaging/: kis-hts-backend.spec
config/: .env.example
docs/: DESIGN.md
frontend/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  cache.ts  format.ts  index.css  indicators.ts  persist.ts  settings.ts  sound.ts  store.ts  types.ts
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: AccountPanel.tsx  Balance.tsx  Chart.tsx  FilledOrders.tsx  Investor.tsx  MarketBar.tsx  OrderBook.tsx  OrderConfirm.tsx  OrderPanel.tsx  OrdersPanel.tsx  PendingOrders.tsx  QuoteHeader.tsx  Ranking.tsx  Settings.tsx  StockInfo.tsx  Toast.tsx  Watchlist.tsx
scripts/: package-app.sh
