[project]
name = "kis-hts-backend"
version = "0.0.1"
description = "KIS OpenAPI macOS HTS - local sidecar backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "requests>=2.32",
    "pandas>=2.2",
    "PyYAML>=6.0",
    "websocket-client>=1.8",   # open-trading-api KISWebSocket 의존
    "pycryptodome>=3.20",      # 체결통보 AES 복호화
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"
